--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ body{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0), 
         rgba(0, 50, 100, 0.6)
-      ), url("assets/maze.png");
+      ), url("assets/maze.jpg");
 
 }
 .tree{
@@ -75,6 +75,6 @@ body{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0), 
         rgba(0, 50, 100, 0.6)
-      ), url("assets/band.png");
+      ), url("assets/band.jpg");
 }
 
