--- a/styles/my-work.css
+++ b/styles/my-work.css
@@ -1,15 +1,18 @@
+
+
 .card-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(20rem,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(min(400px,80vw),1fr));
     gap: 4rem;
     align-items: center;
     justify-items: center;
-    padding: 3rem;
+    padding-block: 4rem;
+    padding-inline: 1rem;
 }
 
 .card{
-    height: 20rem;
-    width: 20rem;
+    height: min(400px,80vw);
+    width: min(400px,80vw);
     background-color: rgb(11, 189, 189);
     border-radius: 2rem;
     position: relative;
@@ -29,52 +32,42 @@
     color: whitesmoke;
     font-size: 2.8rem;
     font-weight: 900;
-
-
 }
-
-body{
-    background-color: rgb(24, 22, 57);
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-}
-
 .maze{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0), 
-        rgba(0, 50, 100, 0.6)
-      ), url("assets/maze.jpg");
+        rgba(50, 50, 100, 0.7)
+      ), url("../assets/maze.jpg");
 
 }
 .tree{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0), 
-        rgba(0, 50, 100, 0.6)
-      ), url("assets/tree.jpg");
+        rgba(50, 50, 100, 0.7)
+      ), url("../assets/tree.jpg");
 }
 .gen-art{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0), 
-        rgba(0, 50, 100, 0.6)
-      ), url("assets/GenArt.jpg");
+        rgba(50, 50, 100, 0.7)
+      ), url("../assets/GenArt.jpg");
 }
 .cloth{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0), 
-        rgba(0, 50, 100, 0.6)
-      ), url("assets/cloth.jpg");
+        rgba(50, 50, 100, 0.7)
+      ), url("../assets/cloth.jpg");
 }
 .bubbles{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0), 
-        rgba(0, 50, 100, 0.6)
-      ), url("assets/bubbles.jpg");
+        rgba(50, 50, 100, 0.7)
+      ), url("../assets/bubbles.jpg");
 }
 .band{
     background-image: linear-gradient(
         rgba(0, 0, 0, 0), 
-        rgba(0, 50, 100, 0.6)
-      ), url("assets/band.jpg");
+        rgba(50, 50, 100, 0.7)
+      ), url("../assets/band.jpg");
 }
 
