--- a/styles/my-work.css
+++ b/styles/my-work.css
@@ -69,6 +69,6 @@
     background-image: linear-gradient(
         rgba(0, 0, 0, 0), 
         rgba(50, 50, 100, 0.7)
-      ), url("../assets/field.png");
+      ), url("../assets/field.jpg");
 }
 
