--- a/styles/profile.css
+++ b/styles/profile.css
@@ -82,6 +82,13 @@
       ), url("../assets/karel.webp");
 }
 
+.QITASC{
+    background-image:linear-gradient(
+        rgba(0, 0, 0, 0), 
+        rgba(50, 50, 100, 0.9)
+      ), url("../assets/qitasc.jpeg");  
+}
+
 .Sadeceon{
     background-image:linear-gradient(
         rgba(0, 0, 0, 0), 
