--- a/styles/my-work.css
+++ b/styles/my-work.css
@@ -72,3 +72,8 @@
       ), url("../assets/field.jpg");
 }
 
+.jobtalk{
+    background-image: linear-gradient(rgb(43, 43, 92), rgb(30, 47, 30));
+}
+
+
